@@ -16,6 +16,7 @@ depth: 1
  * Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
  * Ensure that copying page correctly picks up the latest revision (Matt Westcott)
  * Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
+ * Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
 
 ### Documentation
 
